--- a/dashboard.html
+++ b/dashboard.html
@@ -83,17 +83,7 @@
       <ul class="c-header-nav ml-auto mr-4">
         <li class="c-header-nav-item d-md-down-none mx-2">
           <a class="c-header-nav-link" href="#">
-            <i class="cil-bell"></i>
-          </a>
-        </li>
-        <li class="c-header-nav-item d-md-down-none mx-2"><a class="c-header-nav-link" href="#">
-            <i class="cil-list-rich"></i>
-          </a></li>
-        <li class="c-header-nav-item d-md-down-none mx-2"><a class="c-header-nav-link" href="#">
-            <i class="cil-envelope-open"></i></a></li>
-        <li class="c-header-nav-item dropdown">
-          <a class="c-header-nav-link" href="#">
-            <div class="c-avatar"><i class="cil-apple"></i></div>
+            <p>Officer Taspen</p>
           </a>
         </li>
       </ul>
