--- a/index.html
+++ b/index.html
@@ -10,18 +10,30 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="public/favicon.png">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="public/favicon.png" />
 
     <!-- CoreUI CSS -->
-    <link rel="stylesheet" href="css/coreui.min.css">
+    <link rel="stylesheet" href="css/coreui.min.css" />
 
     <!-- Icon CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/@coreui/icons@2.0.0-beta.3/css/all.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/@coreui/icons@2.0.0-beta.3/css/free.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/@coreui/icons@2.0.0-beta.3/css/brand.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/@coreui/icons@2.0.0-beta.3/css/flag.min.css">
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/@coreui/icons@2.0.0-beta.3/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/@coreui/icons@2.0.0-beta.3/css/free.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/@coreui/icons@2.0.0-beta.3/css/brand.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/@coreui/icons@2.0.0-beta.3/css/flag.min.css"
+    />
 
     <title>e-Rekonsiliasi</title>
   </head>
@@ -32,18 +44,40 @@
           <div class="card-group">
             <div class="card text-center p-4">
               <div class="card-body">
-                <img src="public/logo.png" style="width: 150px;" alt="">
+                <img src="public/logo.png" style="width: 150px" alt="" />
                 <p class="text-muted">Sign In to your account</p>
                 <div class="input-group mb-3">
                   <div class="input-group-prepend"></div>
-                  <input class="form-control" type="text" placeholder="Email" id="email">
+                  <input
+                    class="form-control"
+                    type="text"
+                    placeholder="Email"
+                    id="email"
+                  />
                 </div>
                 <div class="input-group mb-4">
                   <div class="input-group-prepend"></div>
-                  <input class="form-control" type="password" placeholder="Password" id="password">
+                  <input
+                    class="form-control"
+                    type="password"
+                    placeholder="Password"
+                    id="password"
+                  />
                 </div>
-                <button class="btn btn-primary btn-block" onclick="login()" type="button">Login</button>
-                <button class="btn btn-link px-0" type="button" style="display: none;">Lupa password?</button>
+                <button
+                  class="btn btn-primary btn-block"
+                  onclick="login()"
+                  type="button"
+                >
+                  Login
+                </button>
+                <button
+                  class="btn btn-link px-0"
+                  type="button"
+                  style="display: none"
+                >
+                  Lupa password?
+                </button>
               </div>
             </div>
           </div>
@@ -57,25 +91,31 @@
         "officer@taspen.co.id",
         "manager@taspen.co.id",
         "officer@pemkab.co.id",
-        "manager@pemkab.co.id"
-      ]
+        "manager@pemkab.co.id",
+      ];
 
       const passwords = [
         "officertaspen",
         "managertaspen",
         "officerpemkab",
-        "managerpemkab"
-      ]
+        "managerpemkab",
+      ];
 
-      var inputs = document.querySelectorAll('.form-control');
+      var inputs = document.querySelectorAll(".form-control");
       function login() {
-        if ((emails.indexOf(inputs[0].value)!= -1) && (passwords.indexOf(inputs[1].value)!= -1)) {
-          if (emails.indexOf(inputs[0].value) == passwords.indexOf(inputs[1].value)) {
-            value = emails.indexOf(inputs[0].value)
+        if (
+          emails.indexOf(inputs[0].value) != -1 &&
+          passwords.indexOf(inputs[1].value) != -1
+        ) {
+          if (
+            emails.indexOf(inputs[0].value) ==
+            passwords.indexOf(inputs[1].value)
+          ) {
+            value = emails.indexOf(inputs[0].value);
             if (value == 0 || value == 1) {
-              window.location.href = "./dashboard.html"
+              window.location.href = "./dashboard.html";
             } else {
-              window.location.href = "./dashboard1.html"
+              window.location.href = "./dashboard1.html";
             }
           }
         }
