--- a/keuangan.html
+++ b/keuangan.html
@@ -51,22 +51,22 @@
       </div>
       <ul class="c-sidebar-nav">
         <li class="c-sidebar-nav-item">
-          <a href="dashboard1.html" class="c-sidebar-nav-link c-active">
+          <a href="dashboard.html" class="c-sidebar-nav-link">
             <i class="c-sidebar-nav-icon cil-home"></i> Home
           </a>
         </li>
         <li class="c-sidebar-nav-item">
-          <a href="setoran.html" class="c-sidebar-nav-link">
-            <i class="c-sidebar-nav-icon cil-briefcase"></i> Data Setor
+          <a href="keuangan.html" class="c-sidebar-nav-link">
+            <i class="c-sidebar-nav-icon cil-calculator"></i> Keuangan
           </a>
         </li>
         <li class="c-sidebar-nav-item">
-          <a href="upload.html" class="c-sidebar-nav-link">
-            <i class="c-sidebar-nav-icon cil-cloud-upload"></i> Submit
+          <a href="kepesertaan.html" class="c-sidebar-nav-link">
+            <i class="c-sidebar-nav-icon cil-group"></i> Kepesertaan
           </a>
         </li>
         <li class="c-sidebar-nav-item">
-          <a href="rekonsiliasi1.html" class="c-sidebar-nav-link">
+          <a href="rekonsiliasi.html" class="c-sidebar-nav-link">
             <i class="c-sidebar-nav-icon cil-check"></i> Rekonsiliasi
           </a>
         </li>
@@ -102,10 +102,67 @@
           <span class="c-header-toggler-icon"></span>
         </button>
         <ul class="c-header-nav ml-auto mr-4">
-          <li class="c-header-nav-item d-md-down-none mx-2">
-            <a class="c-header-nav-link" href="#">
-              <p>Officer Pemkab</p>
+          <li class="c-header-nav-item dropdown">
+            <a
+              class="c-header-nav-link"
+              data-toggle="dropdown"
+              href="#"
+              role="button"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              <p>Officer Taspen</p>
             </a>
+            <div class="dropdown-menu dropdown-menu-right pt-0">
+              <div class="dropdown-header bg-light py-2">
+                <strong>Settings</strong>
+              </div>
+              <a class="dropdown-item" href="#">
+                <svg class="c-icon mr-2">
+                  <use
+                    xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user"
+                  ></use>
+                </svg>
+                Profile</a
+              ><a class="dropdown-item" href="#">
+                <svg class="c-icon mr-2">
+                  <use
+                    xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-settings"
+                  ></use>
+                </svg>
+                Settings</a
+              ><a class="dropdown-item" href="#">
+                <svg class="c-icon mr-2">
+                  <use
+                    xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-credit-card"
+                  ></use>
+                </svg>
+                Payments<span class="badge badge-secondary ml-auto">42</span></a
+              ><a class="dropdown-item" href="#">
+                <svg class="c-icon mr-2">
+                  <use
+                    xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-file"
+                  ></use>
+                </svg>
+                Projects<span class="badge badge-primary ml-auto">42</span></a
+              >
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">
+                <svg class="c-icon mr-2">
+                  <use
+                    xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lock-locked"
+                  ></use>
+                </svg>
+                Lock Account</a
+              ><a class="dropdown-item" href="#">
+                <svg class="c-icon mr-2">
+                  <use
+                    xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-account-logout"
+                  ></use>
+                </svg>
+                Logout</a
+              >
+            </div>
           </li>
         </ul>
       </header>
