--- a/setoran.html
+++ b/setoran.html
@@ -51,7 +51,7 @@
       </div>
       <ul class="c-sidebar-nav">
         <li class="c-sidebar-nav-item">
-          <a href="dashboard1.html" class="c-sidebar-nav-link c-active">
+          <a href="dashboard1.html" class="c-sidebar-nav-link">
             <i class="c-sidebar-nav-icon cil-home"></i> Home
           </a>
         </li>
