--- a/keuangan.html
+++ b/keuangan.html
@@ -114,47 +114,7 @@
               <p>Officer Taspen</p>
             </a>
             <div class="dropdown-menu dropdown-menu-right pt-0">
-              <div class="dropdown-header bg-light py-2">
-                <strong>Settings</strong>
-              </div>
-              <a class="dropdown-item" href="#">
-                <svg class="c-icon mr-2">
-                  <use
-                    xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user"
-                  ></use>
-                </svg>
-                Profile</a
-              ><a class="dropdown-item" href="#">
-                <svg class="c-icon mr-2">
-                  <use
-                    xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-settings"
-                  ></use>
-                </svg>
-                Settings</a
-              ><a class="dropdown-item" href="#">
-                <svg class="c-icon mr-2">
-                  <use
-                    xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-credit-card"
-                  ></use>
-                </svg>
-                Payments<span class="badge badge-secondary ml-auto">42</span></a
-              ><a class="dropdown-item" href="#">
-                <svg class="c-icon mr-2">
-                  <use
-                    xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-file"
-                  ></use>
-                </svg>
-                Projects<span class="badge badge-primary ml-auto">42</span></a
-              >
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">
-                <svg class="c-icon mr-2">
-                  <use
-                    xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lock-locked"
-                  ></use>
-                </svg>
-                Lock Account</a
-              ><a class="dropdown-item" href="#">
+              <a class="dropdown-item" href="index.html">
                 <svg class="c-icon mr-2">
                   <use
                     xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-account-logout"
