--- a/setoran.html
+++ b/setoran.html
@@ -102,10 +102,27 @@
           <span class="c-header-toggler-icon"></span>
         </button>
         <ul class="c-header-nav ml-auto mr-4">
-          <li class="c-header-nav-item d-md-down-none mx-2">
-            <a class="c-header-nav-link" href="#">
+          <li class="c-header-nav-item dropdown">
+            <a
+              class="c-header-nav-link"
+              data-toggle="dropdown"
+              href="#"
+              role="button"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
               <p>Officer Pemkab</p>
             </a>
+            <div class="dropdown-menu dropdown-menu-right pt-0">
+              <a class="dropdown-item" href="index.html">
+                <svg class="c-icon mr-2">
+                  <use
+                    xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-account-logout"
+                  ></use>
+                </svg>
+                Logout</a
+              >
+            </div>
           </li>
         </ul>
       </header>
